sửa vị trí nút auto scroll

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -91,13 +91,13 @@
     </div>
 
       <!--380-->
-      <div *ngIf="this.loginType == 0" style="padding-top: 10px;padding-left: 315px">
+      <!-- <div *ngIf="this.loginType == 0" style="padding-top: 10px;padding-left: 315px">
         <span class="auto-scroll" (click)="autoScroll()">Auto scroll</span>
       </div>
 
       <div *ngIf="this.loginType == 1" style="padding-top: 10px;padding-left: 380px">
         <span class="auto-scroll" (click)="autoScroll()">Auto scroll</span>
-      </div>
+      </div> -->
   </div>
 
   <div id="pdf-full" class="col-md-9 sample-contract__file viewer-pdf isDrag"
@@ -178,7 +178,7 @@
 </div>
 </div>
 
-<app-footer-signature *ngIf="loaded" [datas]="datas" [view]="[2,3].includes(recipient.status)" [recipientId]="recipientId" (submitChanges)="submitEvents($event)"></app-footer-signature>
+<app-footer-signature *ngIf="loaded" [coordinateY]="coordinateY" [confirmSignature]="confirmSignature" [datas]="datas" [view]="[2,3].includes(recipient.status)" [recipientId]="recipientId" (submitChanges)="submitEvents($event)"></app-footer-signature>
 <!-- <app-confirm-sign-otp (confirmOtpForm)="confirmOtp($event)"></app-confirm-sign-otp> -->
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
