--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -126,12 +126,16 @@
               <div *ngIf="this.lang == 'vi'" class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name}}</div>
               <div *ngIf="this.lang == 'en'" class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name.replace("Ký HĐ","Sign contract").replace("Quá hạn","Overdue").replace("Hoàn thành","Completed")}}</div>
             </div>
-            <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
-              <div class="col-md-12 item_contract_infor">
-                <img src="../../../assets/img/user_icon.svg" width="12px"/>
-                <span> {{s}}</span>
+
+              <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
+                <div class="col-md-12 item_contract_infor">
+                  <img src="../../../assets/img/user_icon.svg" width="12px"/>
+                    <span *ngIf="this.lang == 'vi' || !this.lang"> {{s.replace("Bên B: #PARTICIPANT_2#","")}}</span>
+                    <span *ngIf="this.lang == 'en'"> {{s.replace("Bên B: #PARTICIPANT_2#","").replace("Bên","Side")}}</span>
+                </div>
               </div>
-            </div>
+
+         
             <div class="row item_contract_infor">
 
               <div class="col-md-6 calendar_create">
