highligh auto scroll

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -169,7 +169,7 @@
 </div>
 </div>
 
-<app-footer-signature *ngIf="loaded" [coordinateY]="coordinateY" [confirmSignature]="confirmSignature" [datas]="datas" [view]="[2,3].includes(recipient.status)" [recipientId]="recipientId" (submitChanges)="submitEvents($event)"></app-footer-signature>
+<app-footer-signature *ngIf="loaded" [idElement]="idElement" [coordinateY]="coordinateY" [confirmSignature]="confirmSignature" [datas]="datas" [view]="[2,3].includes(recipient.status)" [recipientId]="recipientId" (submitChanges)="submitEvents($event)"></app-footer-signature>
 <!-- <app-confirm-sign-otp (confirmOtpForm)="confirmOtp($event)"></app-confirm-sign-otp> -->
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
