gui sms & email

--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
@@ -139,7 +139,7 @@
     </div>
     <div class="content_footer"></div>
     <div>
-        <!-- <button type="button" name="next" class="next draft-button" (click)="SaveContract('saveDraft_contract')">{{'btn.save-draff' | translate}}</button> -->
+        <!-- <button type="button" name="next" class="next draft-button" (click)="SaveContract('saveDraft_contract')">{{'btn.save-draft' | translate}}</button> -->
         <button (click)="next()" style="width: 300px" type="button" name="next" class="next action-button pull-right">Xác nhận và gửi hợp đồng</button>
     </div>
 </div>
@@ -150,5 +150,5 @@
   color="#fff"
   type="ball-spin-clockwise"
 >
-  <p style="font-size: 18px; color: white">Đang xử lý...</p>
+  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
 </ngx-spinner>
