--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -1603,7 +1603,7 @@
       class="next draft-button"
       (click)="next('save-draft')"
     >
-      {{ "btn.save-draff" | translate }}
+      {{ "btn.save-draft" | translate }}
     </button>
     <button
       (click)="next('save-step')"
