--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
@@ -111,7 +111,7 @@
         style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
     <div>
         <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
-            style="background-color: #FCAF17">{{'btn.save-draff' | translate}}</button>
+            style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
         <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
     </div>
 </div>
