--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1084,7 +1084,7 @@
     </button>
   </div>
   <div>
-    <button type="button" name="next" class="next draft-button" (click)="next('save-draft')">{{'btn.save-draff' |
+    <button type="button" name="next" class="next draft-button" (click)="next('save-draft')">{{'btn.save-draft' |
       translate }}</button>
     <button (click)="next('save-step')" type="button" name="next" class="next action-button pull-right">{{'btn.next' |
       translate }}</button>
