--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -121,5 +121,5 @@
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
-    <p style="font-size: 18px; color: white">Đang xử lý...</p>
+    <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
 </ngx-spinner>
