--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -142,7 +142,7 @@
 </div>
 
 <div class="footer-infor-contract">
-  <button (click)="saveDraft()" type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate
+  <button (click)="saveDraft()" type="button" name="next" class="next draft-button">{{'btn.save-draft' | translate
     }}</button>
   <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate
     }}</button>
