--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -120,7 +120,7 @@
     <!-- <div class="content_footer">@Copyright 2021 - MobiFone</div> -->
     <div>
         <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
-            style="background-color: #FCAF17">{{'btn.save-draff' | translate}}</button>
+            style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
         <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
     </div>
 </div>
