--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -44,7 +44,7 @@
 
                 <div class="col-md-2" style="flex-direction: column;text-align: center">
                     <div *ngIf = "d.statusNumber != 0">
-                    <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="Gửi lại SMS/Email" (click)="resendSmsEmail(d.id)"/>
+                    <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="Gửi lại SMS/Email" (click)="resendSmsEmail(d)"/>
                     </div>
                 </div>
             </div>
