--- a/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
@@ -1,88 +1,88 @@
 <div class="container-fluid">
-  <div class="header">
-    <h3 class="label-header">{{ this.data.title | translate }}</h3>
-  </div>
-  <div class="content">
-    <div class="label-header">{{ "THÔNG TIN CHI TIẾT" | translate }}</div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="label_item">{{ "unit.name" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.name" class="input_text"></div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="label_item">{{ "unit.code" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.code" class="input_text"></div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="label_item">{{ "unit.email" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.email" class="input_text"></div>
-        </div>
-      </div>
+    <div class="header">
+        <h3 class="label-header">{{ this.data.title | translate }}</h3>
     </div>
+    <div class="content">
+        <div class="label-header">{{ "THÔNG TIN CHI TIẾT" | translate }}</div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="label_item">{{ "unit.name" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.name" class="input_text"></div>
+                </div>
+            </div>
 
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-4">
-        <div class="label_item">{{ "Mã số thuế" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.taxCode" class="input_text"></div>
+            <div class="col-md-4">
+                <div class="label_item">{{ "unit.code" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.code" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{ "unit.email" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.email" class="input_text"></div>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <div class="col-md-4">
-        <div class="label_item">{{ "Chức vụ" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.position" class="input_text"></div>
+        <div class="row" style="padding-top: 10px">
+            <div class="col-md-4">
+                <div class="label_item">{{'tax_code' | translate}}</div>
+                <div>
+                    <div [innerHTML]="datas?.taxCode" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{ "Chức vụ" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.position" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{ "Địa chỉ" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.address" class="input_text"></div>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <div class="col-md-4">
-        <div class="label_item">{{ "Địa chỉ" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.address" class="input_text"></div>
+        <div class="row" style="padding-top: 10px">
+            <div class="col-md-4">
+                <div class="label_item">{{ "Người đại diện" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.representative" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{ "unit.phone" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.phone" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{ "unit.fax" | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas?.size" class="input_text"></div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-4">
-        <div class="label_item">{{ "Người đại diện" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.representative" class="input_text"></div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="label_item">{{ "unit.phone" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.phone" class="input_text"></div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="label_item">{{ "unit.fax" | translate }}</div>
-        <div>
-          <div [innerHTML]="datas?.size" class="input_text"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <!-- <div class="col-md-4">
+        <div class="row" style="padding-top: 10px">
+            <!-- <div class="col-md-4">
         <div class="label_item">{{ "Đẩy file hợp đồng lên Bộ công thương" | translate }}</div>
         <div>
           <div [innerHTML]="this.getFileCeCa()" class="input_text"></div>
         </div>
       </div> -->
-      <div class="col-md-6" style="align-self: center">
-        <input type="radio" checked style="outline: none" />
-        <span>
+            <div class="col-md-6" style="align-self: center">
+                <input type="radio" checked style="outline: none" />
+                <span>
           {{
             (datas?.status == "ACTIVE" ? "unit.active" : "unit.inactive")
               | translate
@@ -122,24 +122,14 @@
           <td>{{ list.startDate }}</td>
           <td>
             <span *ngIf="list.usageStatus == 'NOT_USED'">Chưa sử dụng</span>
-            <span *ngIf="list.usageStatus == 'USING'">Đang sử dụng</span>
-            <span *ngIf="list.usageStatus == 'FINISHED'">Đã kết thúc</span>
-            <span *ngIf="list.usageStatus == 'CANCELED'">Đã huỷ</span>
-          </td>
-          <td style="text-align: center">
-            <img *ngIf="list.usageStatus == 'NOT_USED'"
-            (click)="editUnitPack(list.serviceId)"
-              src="../../../assets/img/icon_edit.svg"
-              width="20px"
-              style="cursor: pointer"
-            />&nbsp;&nbsp;
-            <img *ngIf="list.usageStatus != 'USING'"
-            (click)="deleteUnitPack(list.serviceId)"
-              src="../../../assets/img/icon_delete.svg"
-              width="16px"
-              style="cursor: pointer"
-            />
-            <!-- <img (click)="editUnitPack(list.serviceId)"
+                <span *ngIf="list.usageStatus == 'USING'">Đang sử dụng</span>
+                <span *ngIf="list.usageStatus == 'FINISHED'">Đã kết thúc</span>
+                <span *ngIf="list.usageStatus == 'CANCELED'">Đã huỷ</span>
+                </td>
+                <td style="text-align: center">
+                    <img *ngIf="list.usageStatus == 'NOT_USED'" (click)="editUnitPack(list.serviceId)" src="../../../assets/img/icon_edit.svg" width="20px" style="cursor: pointer" />&nbsp;&nbsp;
+                    <img *ngIf="list.usageStatus != 'USING'" (click)="deleteUnitPack(list.serviceId)" src="../../../assets/img/icon_delete.svg" width="16px" style="cursor: pointer" />
+                    <!-- <img (click)="editUnitPack(list.serviceId)"
               src="../../../assets/img/icon_edit.svg"
               width="20px"
               style="cursor: pointer"
@@ -149,12 +139,11 @@
               width="16px"
               style="cursor: pointer"
             /> -->
-          </td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="paginatorleft" let-state>
-        <span style="color: white !important"
-          >{{ "chart.number" | translate }}:
+                </td>
+                </tr>
+                </ng-template>
+                <ng-template pTemplate="paginatorleft" let-state>
+                    <span style="color: white !important">{{ "chart.number" | translate }}:
           {{ state.totalRecords > 0 ? state.first + 1 : state.first }} -
           {{
             state.first + state.rows > state.totalRecords
