--- a/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -27,15 +27,15 @@
                     <div class="form-group">
                         <div class="label_item">{{'effective-date' | translate}}</div>
                         <div class="input_text" style="display: flex;">
-                            <div [innerHTML]="this.datas.start_time | date: 'dd/MM/yyyy'" ></div>
+                            <div [innerHTML]="this.datas.start_time | date: 'dd/MM/yyyy'"></div>
                             <div> - </div>
-                            <div [innerHTML]="this.datas.end_time | date: 'dd/MM/yyyy'" ></div>
+                            <div [innerHTML]="this.datas.end_time | date: 'dd/MM/yyyy'"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-2"></div>  
+        <div class="col-md-2"></div>
         <div class="col-md-5">
             <div class="row">
                 <div class="col-md-12">
@@ -64,7 +64,7 @@
 <div class="labelOrg" style="text-transform: uppercase;">{{'side.sign' | translate}}</div>
 <div class="determine_contact">
     <div class="user_contact">
-        <div class="label" style="text-transform: uppercase;">{{'organization.me'  | translate}}</div>
+        <div class="label" style="text-transform: uppercase;">{{'organization.me' | translate}}</div>
         <div class="content_determine">
             <div class="row">
                 <div class="col-md-5">
@@ -136,7 +136,7 @@
                             <div>{{getPartnerSignature(record).length}}</div>
                         </div>
                     </div>
-                </div>   
+                </div>
                 <div class="col-md-2"></div>
                 <div class="col-md-5" *ngIf="record.type == 2">
                     <div class="form-group">
@@ -154,14 +154,14 @@
 
 <div class="footer-infor-contract">
     <div style="width: 200px;">
-        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
     </div>
     <div class="content_footer"></div>
     <div>
-        <button (click)="SaveContract('finish_contract')" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
+        <button (click)="SaveContract('finish_contract')" type="button" name="next" class="next action-button pull-right">{{'btn.done' | translate}}</button>
     </div>
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
     <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
-  </ngx-spinner>
+</ngx-spinner>
