--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -1,5 +1,5 @@
 <!-- form step 4 -->
-<div class="labelOrg">HỢP ĐỒNG</div>
+<div class="labelOrg">{{'contract' | translate}}</div>
 <div class="infor_contact">
     <div class="row">
         <div class="col-md-5">
@@ -39,7 +39,7 @@
 <div class="labelOrg">{{'side.sign' | translate}}</div>
 <div class="determine_contact">
     <div class="user_contact">
-        <div class="label">TỔ CHỨC CỦA TÔI</div>
+        <div class="label">{{'to_chuc_cua_toi' | translate}}</div>
         <div class="content_determine">
             <div class="row">
                 <div class="col-md-5">
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Văn thư</div>
+                        <div class="label_item">{{'user.doc' | translate}}</div>
                         <div class="input_text">
                             <div *ngFor="let item of this.is_origanzation_document">
                                 <div>{{item.name}} - {{item.email}}</div>
@@ -81,12 +81,12 @@
     </div>
 
     <div class="partner_contact" *ngFor="let record of this.data_parnter_organization;">
-        <div class="label">ĐỐI TÁC {{record.name | uppercase}}</div>
+        <div class="label">{{'partner' | translate}} {{record.name | uppercase}}</div>
         <div class="content_determine">
             <div class="row" *ngIf="record.type == 2">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <div class="label_item">Người điều phối</div>
+                        <div class="label_item">{{'user.lead' | translate}}</div>
                         <div class="input_text">
                             <div *ngFor="let item of getPartnerCoordinationer(record)">
                                 <div>{{item.name}} - {{item.email}}</div>
@@ -121,7 +121,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-5" *ngIf="record.type == 2">
                     <div class="form-group">
-                        <div class="label_item">Văn thư</div>
+                        <div class="label_item">{{'user.doc' | translate}}</div>
                         <div class="input_text">
                             <div *ngFor="let item of getPartnerDocument(record)">
                                 <div>{{item.name}} - {{item.email}}</div>
@@ -135,20 +135,15 @@
 </div>
 <div class="footer-infor-contract">
     <div style="width: 200px;">
-        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
     </div>
     <div class="content_footer"></div>
     <div>
         <button type="button" name="next" class="next draft-button" (click)="SaveContract('saveDraft_contract')">{{'btn.save-draft' | translate}}</button>
-        <button (click)="submit('finish_contract')" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
+        <button (click)="submit('finish_contract')" type="button" name="next" class="next action-button pull-right">{{'btn.done' | translate}}</button>
     </div>
 </div>
 
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-spin-clockwise"
->
-  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+    <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
 </ngx-spinner>
