--- a/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -154,14 +154,18 @@
 
 <div class="footer-infor-contract">
     <div style="width: 200px;">
-        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">{{'btn.previous' | translate}}</button>
     </div>
     <div class="content_footer"></div>
     <div>
-        <button (click)="SaveContract('finish_contract')" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
+        <button (click)="preview()" type="button" name="next" class="next action-button">{{'preview' | translate}}</button>
+        <button (click)="SaveContract('finish_contract')" type="button" name="next" class="next action-button pull-right">{{'btn.done' | translate}}</button>
     </div>
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
     <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
-  </ngx-spinner>
+</ngx-spinner>
+
+<div id="pdf-viewer-step-3">  
+</div>
