update sms & email

--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
@@ -21,7 +21,7 @@
         placeholder="{{'choose.network' | translate}}"
         [showClear]="true"
       ></p-dropdown>
-      <!--<ngx-select [items]="optionsNetworkCompany" [placeholder]="'Chọn nhà mạng'" [(ngModel)]="networkCompany" optionValueField="item_id" optionTextField="item_text"></ngx-select>-->
+      <!--<ngx-select [items]="optionsNetworkCompany" [placeholder]="{{'choose.network' | translate}}" [(ngModel)]="networkCompany" optionValueField="item_id" optionTextField="item_text"></ngx-select>-->
     </div>
 
     <div class="select-option">
