--- a/src/app/main/contract-signature/shared/model/dialog-reason-cancel/dialog-reason-cancel.component.html
+++ b/src/app/main/contract-signature/shared/model/dialog-reason-cancel/dialog-reason-cancel.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+    <!-- <h3 style="text-align: center; color: #106db6;">{{'cancel.contract' | translate}}</h3> -->
     <h3 style="text-align: center; color: #106db6;">LÝ DO HỦY BỎ HỢP ĐỒNG</h3>
     <div style="max-height: 405px; overflow: auto; font-size: 14px;">
         <div style="text-align: center; word-break: break-word;">
@@ -7,6 +8,7 @@
     </div>
 
     <div class="footer-btn" style="text-align: center; margin-top: 20px;">
+        <!-- <button (click)="handleCancel()">{{"exit" | translate}}</button> -->
         <button (click)="handleCancel()">Thoát</button>
     </div>
 </div>
