--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -136,7 +136,7 @@
                             <div class="col-md-12">
                                 <div>{{'user.network' | translate}}</div>
                                 <div>
-                                    <p-dropdown panelStyleClass="font" [options]="networkList" formControlName="networkKpi" optionLabel="name" optionValue="id" placeholder="Chọn nhà mạng" [filter]="true" filterBy="name" [showClear]="true"></p-dropdown>
+                                    <p-dropdown panelStyleClass="font" [options]="networkList" formControlName="networkKpi" optionLabel="name" optionValue="id" placeholder="{{'choose.network' | translate}}" [filter]="true" filterBy="name" [showClear]="true"></p-dropdown>
                                 </div>
                             </div>
                         </div>
