--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <div class="label_item">Tên hợp đồng</div>
+                        <div class="label_item">{{'contract.name' | translate}}</div>
                         <div>
                             <div [innerHTML]="isFileName" class="input_text"></div>
                         </div>
