--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -78,9 +78,9 @@
     <div class="label">
     </div>
     <div class="label" *ngIf="role || this.status == 30">
-      <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role)}}</button>
+      <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
 
-      <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role)}}</button>
+      <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
 
     </div>
   </div>
